[gd_scene load_steps=10 format=3 uid="uid://jgg6s70ndcyg"]

[ext_resource type="Script" path="res://scripts/regiment.gd" id="1_m4j82"]
[ext_resource type="Script" path="res://scripts/Area2D_Movement.gd" id="2_ajl3d"]
[ext_resource type="Script" path="res://scripts/Line.gd" id="3_ul15w"]
[ext_resource type="Script" path="res://scripts/RotationKnop.gd" id="4_q2wme"]
[ext_resource type="Texture2D" uid="uid://4845qd0tii57" path="res://grfx/icon_PointNorth32.png" id="5_iqkng"]
[ext_resource type="Script" path="res://scripts/Area2D_EnemyRange.gd" id="6_3ecub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80qwq"]
size = Vector2(92.75, 48.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_u1l20"]
radius = 28.7924

[sub_resource type="CircleShape2D" id="CircleShape2D_ud22c"]
radius = 118.038

[node name="regiment" type="Node2D"]
script = ExtResource("1_m4j82")

[node name="Area2D_Movement" type="Area2D" parent="."]
script = ExtResource("2_ajl3d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Movement"]
shape = SubResource("RectangleShape2D_80qwq")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Line" type="Node2D" parent="Area2D_Movement"]
script = ExtResource("3_ul15w")

[node name="Area2D_Rotation" type="Area2D" parent="."]
script = ExtResource("4_q2wme")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Rotation"]
shape = SubResource("CircleShape2D_u1l20")

[node name="Sprite2D" type="Sprite2D" parent="Area2D_Rotation"]
scale = Vector2(2.28023, 1.85585)
texture = ExtResource("5_iqkng")

[node name="Label" type="Label" parent="Area2D_Rotation"]
offset_left = 31.0
offset_top = -2.0
offset_right = 119.0
offset_bottom = 21.0
text = "AP:"

[node name="Label2" type="Label" parent="Area2D_Rotation"]
offset_left = -149.0
offset_top = -2.0
offset_right = -86.0
offset_bottom = 21.0
text = "degRot: "

[node name="Area2D_EnemyRange" type="Area2D" parent="."]
self_modulate = Color(0.152941, 0.152941, 0.152941, 1)
show_behind_parent = true
collision_layer = 4
collision_mask = 4
script = ExtResource("6_3ecub")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_EnemyRange"]
shape = SubResource("CircleShape2D_ud22c")

[node name="BattleLabel" type="Label" parent="."]
offset_left = -137.0
offset_top = -65.0
offset_right = 226.0
offset_bottom = -42.0

[connection signal="input_event" from="Area2D_Movement" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Area2D_Rotation" to="." method="_on_area_2d_2_input_event"]
[connection signal="area_entered" from="Area2D_EnemyRange" to="." method="_on_area_2d_enemy_range_area_entered"]
[connection signal="area_exited" from="Area2D_EnemyRange" to="." method="_on_area_2d_enemy_range_area_exited"]
